# s3-sentinel-connector

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  env.example  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements-test.txt  requirements.txt  setup.py
.audit/: phase1-structural-analysis.md  phase2-implementation-roadmap.md
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
Solutions/S3SentinelConnector/: Metadata.json  Package.json  Post-Deployment.md  QUALITY_GATE_CHECKLIST.md  README.md  ReleaseNotes.md
config/: alerts.yaml  base.yaml  dev.yaml  logging.yaml  prod.yaml  tables.yaml  tls.yaml
config/roles/: connector-admin.yaml  connector-reader.yaml
deployment/monitoring/: alertmanager-config.yaml  grafana-dashboard-s3-sentinel.json  prometheus-rules.yaml
deployment/scripts/: deploy.sh  smoke_tests.sh  terraform_fmt_recursive.ps1  terraform_validate_all.ps1
docs/: API_CONTRACTS.md  PROJECT_STRUCTURE.md  TOC.md  api.md  architecture.md  deployment.md  ml_features.md  monitoring.md  onboarding.md  testing.md
docs/runbooks/: README.md  circuit-breaker-recovery.md  credential-rotation.md  failed-batch-recovery.md  performance-troubleshooting.md
examples/: Example config usage in application.py  Example monitoring usage in main application.py
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
scripts/: analyze_bottlenecks.sh  analyze_consistency.py  analyze_memory.sh  check_compliance.sh  check_fd_usage.sh  check_latency.sh  check_resources.sh  cleanup_failed_batches.py  deploy_models.sh  diagnose_connectivity.sh  diagnose_performance.sh  rotate_keys.sh  setup_security.sh  verify_audit_logs.sh  verify_connectivity.sh  verify_security.sh  view_errors.sh
src/: __init__.py
src/config/: config_manager.py
src/core/: __init__.py  log_parser.py  s3_handler.py  sentinel_router.py
src/ml/: enhanced_connector.py
src/monitoring/: __init__.py  alerts.py  component_metrics.py  metrics.py  pipeline_monitor.py
src/s3_sentinel/: __init__.py  cli.py  pipeline.py  replay.py  server.py
src/security/: __init__.py  access_control.py  audit.py  config_validator.py  credential_manager.py  encryption.py  (+2 more)
tests/: conftest.py  test_config_manager.py  test_critical_imports.py  test_log_parser.py  test_ml_enhanced_connector.py  test_monitoring_manager.py  test_monitoring_modules.py  test_phase3_fixes.py  test_pipeline_monitor.py  test_s3_handler.py  test_s3_handler_async.py  test_sentinel_router.py
(+106 files in other folders)
