[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
line_length = 88
known_first_party = ['src']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C90", "RUF"]
# Removed unsupported selector `W503` which causes a TOML parse/error in ruff.
ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist", "Solutions"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.dev-requirements]
file = "requirements-dev.txt"

[tool.metadata]
dev-requirements = "See requirements-dev.txt for development dependencies"
